# lesta

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  update-requirements.yml
app/: api.py  logger.py  main.py  schemas.py
app/database/: crud.py  db.py  models.py
app/services/: parsing.py  tfidf.py
app/templates/: base.html  error.html  index.html  results.html
data/: sample1.txt  sample2.txt  sample3.txt  sample4.txt  sample5.txt
migrations/: env.py
migrations/versions/: 7b5f70ba4a72_.py  add_document_sources_columns.py  ed0064edf3fb_.py
samples/: sample1.txt  sample2.txt  sample3.txt  sample5.txt
tests/: test_tfidf.py
