[tool.poetry]
name = "lesta-tfidf"
version = "1.3.4"
description = "TF-IDF веб-приложение для анализа текстовых документов"
authors = ["m.brmglv@gmail.com"]
readme = "README.md"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.104.1"
uvicorn = "0.23.2"
jinja2 = "3.1.2"
python-multipart = "0.0.6"
nltk = "3.8.1"
aiofiles = "23.2.1"
httpx = "0.24.1"
sqlalchemy = "2.0.20"
alembic = "1.11.3"
psycopg2-binary = "2.9.10"
asyncpg = "0.30.0"
python-dotenv = "1.0.0"
aiosqlite = "0.17.0"
greenlet = "3.0.3"
structlog = "23.1.0"
python-json-logger = "2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.3"
pytest-cov = "6.1.1"
pytest-asyncio = "0.21.1"
ruff = "0.1.5"
mypy = "1.7.0"
pre-commit = "4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11"
show_column_numbers = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
warn_redundant_casts = true
warn_no_return = true
warn_return_any = false

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "B", "I"]
ignore = ["E501", "B008"]
exclude = ["samples"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "--cov=app --cov-report=term-missing"
